--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 #root {
   max-width: 1800px;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   text-align: center;
   width: 100%;
   height: 100vh;
